--- a/index.html
+++ b/index.html
@@ -7,5 +7,33 @@
         <title>Document</title>
     </head>
      
+<table>
+    <thead>
+        <tr>
+            <th rowspan="2">Cloud service</th>
+            <th colspan="3">Statistics</th>
+        </tr>
+        <tr>
+            <th>Users</th>
+            <th>Visits</th>
+            <th>Volume</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td>Google</td>
+            <td>12000</td>
+            <td>307000</td>
+            <td>1000 Tb</td>
+        </tr>
+        <tr>
+            <td>Amazon</td>
+            <td>9000</td>
+            <td>200500</td>
+            <td>800 Tb</td>
+        </tr>
+    </tbody>
+</table>
 
 </html>
