--- a/index.html
+++ b/index.html
@@ -6,34 +6,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
-     
-<table>
-    <thead>
-        <tr>
-            <th rowspan="2">Cloud service</th>
-            <th colspan="3">Statistics</th>
-        </tr>
-        <tr>
-            <th>Users</th>
-            <th>Visits</th>
-            <th>Volume</th>
-        </tr>
-    </thead>
 
-    <tbody>
-        <tr>
-            <td>Google</td>
-            <td>12000</td>
-            <td>307000</td>
-            <td>1000 Tb</td>
-        </tr>
-        <tr>
-            <td>Amazon</td>
-            <td>9000</td>
-            <td>200500</td>
-            <td>800 Tb</td>
-        </tr>
-    </tbody>
-</table>
+<video poster="https://images.pexels.com/photos/595804/pexels-photo-595804.jpeg?w=640" width="640" controls>
+    <source src="http://techslides.com/demos/sample-videos/small.webm" type="video/webm" />
+    <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4" />
+    <source src="http://techslides.com/demos/sample-videos/small.ogv" type="video/ogg" />
+
+    Your browser does not support the <code>video</code> element.
+</video>
+
+<audio controls>
+    <source src="song.mp3" type="audio/mpeg" />
+    <source src="song.ogg" type="audio/ogg" />
+
+    Your browser does not support the <code>audio</code> element.
+</audio>
 
 </html>
