--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<video poster="https://images.pexels.com/photos/595804/pexels-photo-595804.jpeg?w=640" width="640" controls>
+  <video
+    poster="https://images.pexels.com/photos/595804/pexels-photo-595804.jpeg?w=640"
+    width="640"
+    controls
+  >
     <source src="http://techslides.com/demos/sample-videos/small.webm" type="video/webm" />
     <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4" />
     <source src="http://techslides.com/demos/sample-videos/small.ogv" type="video/ogg" />
 
     Your browser does not support the <code>video</code> element.
-</video>
+  </video>
 
-<audio controls>
+  <audio controls>
     <source src="song.mp3" type="audio/mpeg" />
     <source src="song.ogg" type="audio/ogg" />
 
     Your browser does not support the <code>audio</code> element.
-</audio>
-
+  </audio>
 </html>
