--- a/index.html
+++ b/index.html
@@ -8,28 +8,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <pre>
-  А ты когда-то слушал тишину?
-  Как жаль, что ничего ты не услышал,
-  Лишь тронь её беззвучную струну,
-  И ты поймёшь, что можно даже тише.
-</pre
-    >
-
-    <pre>
-  А ты когда-то спорил с тишиной?
-  И не пытайся, я однажды спорил,
-  Как будто смыло штормовой волной,
-  Противоречия всех моих историй.
-</pre
-    >
-
-    <pre>
-  А ты когда-то видел тишину?
-  Как идёт дождь, или летают птицы,
-  А может видел ночью синеву,
-  Или улыбку на любимых лицах.
-</pre
-    >
+    <div class="box-1"></div>
+    <div class="box-2"></div>
+    <div class="box-3"></div>
   </body>
 </html>
