--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="box-1"></div>
-    <div class="box-2"></div>
-    <div class="box-3"></div>
+    <ul class="list">
+      <li class="list-item">1</li>
+      <li class="list-item">2</li>
+      <li class="list-item">3</li>
+      <li class="list-item">4</li>
+      <li class="list-item">5</li>
+      <li class="list-item">6</li>
+      <li class="list-item">7</li>
+      <li class="list-item">8</li>
+      <li class="list-item">9</li>
+      <li class="list-item">10</li>
+    </ul>
   </body>
 </html>
