--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul class="list">
-      <li class="list-item">1</li>
-      <li class="list-item">2</li>
-      <li class="list-item">3</li>
-      <li class="list-item">4</li>
-      <li class="list-item">5</li>
-      <li class="list-item">6</li>
-      <li class="list-item">7</li>
-      <li class="list-item">8</li>
-      <li class="list-item">9</li>
-      <li class="list-item">10</li>
-    </ul>
+    <header class="page-header">
+      <a href="" class="logo">Logo</a>
+
+      <ul class="menu">
+        <li class="item"><a href="" class="link">Home page</a></li>
+        <li class="item"><a href="" class="link">Blog</a></li>
+        <li class="item"><a href="" class="link">Podcasts</a></li>
+        <li class="item"><a href="" class="link">Contacts</a></li>
+      </ul>
+    </header>
   </body>
 </html>
