--- a/index.html
+++ b/index.html
@@ -8,15 +8,56 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="page-header">
-      <a href="" class="logo">Logo</a>
+    <div class="container">
+      <ul class="card-set">
+        <li class="item">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro atque excepturi facilis
+            molestias eius earum at officia velit reprehenderit veritatis.
+          </p>
+        </li>
 
-      <ul class="menu">
-        <li class="item"><a href="" class="link">Home page</a></li>
-        <li class="item"><a href="" class="link">Blog</a></li>
-        <li class="item"><a href="" class="link">Podcasts</a></li>
-        <li class="item"><a href="" class="link">Contacts</a></li>
+        <li class="item">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro atque excepturi facilis
+            molestias eius earum at officia velit reprehenderit veritatis.
+          </p>
+        </li>
+
+        <li class="item">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro atque excepturi facilis
+            molestias eius earum at officia velit reprehenderit veritatis.
+          </p>
+        </li>
+
+        <li class="item">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro atque excepturi facilis
+            molestias eius earum at officia velit reprehenderit veritatis.
+          </p>
+        </li>
+
+        <li class="item">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro atque excepturi facilis
+            molestias eius earum at officia velit reprehenderit veritatis.
+          </p>
+        </li>
+
+        <li class="item">
+          <h2>Lorem ipsum dolor sit amet.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro atque excepturi facilis
+            molestias eius earum at officia velit reprehenderit veritatis.
+          </p>
+        </li>
       </ul>
-    </header>
+    </div>
   </body>
 </html>
