--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <!-- ---TEST BTN--- -->
   <body>
+    <!-- ---TEST BTN--- -->
     <section class="section container">
       <button class="btn-test">КНОПКА</button>
     </section>
@@ -33,6 +33,13 @@
         <li class="menu-item"><a class="menu-link" href="">Профиль</a></li>
         <li class="menu-item"><a class="menu-link" href="">Галерея</a></li>
       </ul>
+    </section>
+
+    <section>
+      <form action="">
+        <label for="name">Имя</label>
+        <input type="text" name="name" id="name"></input>
+      </form>
     </section>
   </body>
 </html>
