--- a/index.html
+++ b/index.html
@@ -34,12 +34,17 @@
         <li class="menu-item"><a class="menu-link" href="">Галерея</a></li>
       </ul>
     </section>
-
-    <section>
-      <form action="">
+<!-- ---FORMS--- -->
+    <form class="section container">
+     <div>
         <label for="name">Имя</label>
-        <input type="text" name="name" id="name"></input>
-      </form>
-    </section>
+        <input type="text" name="name" id="name" placeholder="Василий Батькович" autofocus></input>
+     </div>
+
+     <div role="group">
+        <input type="checkbox" name="topic" value="ford" id="ford">
+        <label for="ford">Ford</label>
+     </div>
+    <form>
   </body>
 </html>
