--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
      <div role="group">
         <input type="checkbox" name="topic" value="ford" id="ford">
         <label for="ford">Ford</label>
+
+        <input type="checkbox" name="topic" value="nissan" id="nissan>
+        <label for="ford">Nissan</label>
+
+        <input type="checkbox" name="topic" value="bmw" id="bmw">
+        <label for="ford">BMW</label>
      </div>
     <form>
   </body>
