--- a/index.html
+++ b/index.html
@@ -22,35 +22,61 @@
   </head>
 
   <body>
-    <!-- ---TEST BTN--- -->
-    <section class="section container">
-      <button class="btn-test">КНОПКА</button>
-    </section>
+    <script>
+      // Module 2 - 12
+      // function makeStringFromArray(array, delimeter) {
+      //   let string;
+      //   // Change code below this line
 
-    <section class="section container">
-      <ul class="menu">
-        <li class="menu-item"><a class="menu-link" href="">Блог</a></li>
-        <li class="menu-item"><a class="menu-link" href="">Профиль</a></li>
-        <li class="menu-item"><a class="menu-link" href="">Галерея</a></li>
-      </ul>
-    </section>
-<!-- ---FORMS--- -->
-    <form class="section container">
-     <div>
-        <label for="name">Имя</label>
-        <input type="text" name="name" id="name" placeholder="Василий Батькович" autofocus></input>
-     </div>
+      //   string = array.join(delimeter);
 
-     <div role="group">
-        <input type="checkbox" name="topic" value="ford" id="ford">
-        <label for="ford">Ford</label>
+      //   // Change code above this line
+      //   return string;
+      // }
 
-        <input type="checkbox" name="topic" value="nissan" id="nissan>
-        <label for="ford">Nissan</label>
+      // console.log(
+      //   makeStringFromArray(["Mango", "hurries", "to", "the", "train"], " ")
+      // );
+      // console.log(makeStringFromArray(["M", "a", "n", "g", "o"], ""));
+      // console.log(makeStringFromArray(["top", "picks", "for", "you"], "_"));
 
-        <input type="checkbox" name="topic" value="bmw" id="bmw">
-        <label for="ford">BMW</label>
-     </div>
-    <form>
+      // Module 2 - 13
+      // function slugify(title) {
+      //   // Change code below this line
+      //   return title.toLowerCase().split(" ").join("-");
+      //   // Change code above this line
+      // }
+
+      // console.log(slugify("Arrays for begginers"));
+      // console.log(slugify("English for developer"));
+      // console.log(slugify("Ten secrets of JavaScript"));
+      // console.log(slugify("How to become a JUNIOR developer in TWO WEEKS"));
+      // EXAMPLE
+      // function calculatedTotalPrice(items) {
+      //   let total = 0;
+
+      //   for (const item of items) {
+      //     total = total + item;
+      //   }
+
+      //   return total;
+      // }
+      // console.log(calculatedTotalPrice([1, 2, 3]));
+
+      // Module 2 - 16
+      function makeArray(firstArray, secondArray, maxLength) {
+        // Change code below this line
+        const allArray = firstArray.concat(secondArray);
+        const len = allArray.slice(0, maxLength);
+
+        if (allArray.lenght > maxLength) {
+          return allArray;
+        } else {
+          return len;
+        }
+        console.log(makeArray(["Mango", "Poly"], ["Ajax", "Chelsea"], 3));
+        // Change code above this line
+      }
+    </script>
   </body>
 </html>
