--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Studio</title>
+    <title>Document title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,24 +19,15 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+
+    ;
   </head>
-
   <body>
-    <script>
-      // Module 2 - 16
-      function makeArray(firstArray, secondArray, maxLength) {
-        // Change code below this line
-        const allArray = firstArray.concat(secondArray);
-        const len = allArray.slice(0, maxLength);
+    <section>
+      <h2>Popular technologies</h2>
+      <ul class="list"></ul>
+    </section>
 
-        if (allArray.lenght > maxLength) {
-          return allArray;
-        } else {
-          return len;
-        }
-        console.log(makeArray(["Mango", "Poly"], ["Ajax", "Chelsea"], 3));
-        // Change code above this line
-      }
-    </script>
+    <script src="./js/test.js"></script>
   </body>
 </html>
