--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     ;
   </head>
   <body>
-    <section>
-      <h2>Popular technologies</h2>
-      <ul class="list"></ul>
-    </section>
+    <button class="btn" data-action="add">Add Listener</button>
+    <button class="btn" data-action="remove">Remove Listener</button>
+    <hr />
+    <button id="btn" class="btn">Click me</button>
 
     <script src="./js/test.js"></script>
   </body>
