--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
 
     <script src="./js/test.js"></script>
     <script src="./js/async.js"></script>
+    <script src="./js/repeat-js.js"></script>
   </body>
 </html>
